create a JavaScript function that will generate the DOM structure for a tweet

--- a/public/index.html
+++ b/public/index.html
@@ -17,20 +17,20 @@
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/76e68c1895.js" crossorigin="anonymous"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="./scripts/client.js"></script>
     <script type="text/javascript" src="./scripts/composer-char-counter.js"></script>
 
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/76e68c1895.js" crossorigin="anonymous"></script>
     
   </head>
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
       <div>
-        <span class="title">tweeter</span>
+        <span style="font-family: 'Bungee', cursive;">tweeter</span>
       </div>
       <div>
         <div>Write a new tweet</div>
@@ -61,17 +61,17 @@
           </div>
         </form>
       </section>
-      <section id="tweeting-container">
-        <article>
+      <section id="tweets-container">
+        <!-- <article>
           <header>
             <div class="tweet-profile">
-              <img src="./images/dog.png">
-              Newton
+              <div class="profile-image"><img src="./images/dog.png"></div>
+              <div class="profile-name">Newton</div>
             </div>
             <div class="user-name">@Sirlsaac</div>
           </header>
           <div class="tweet-content">
-            <div>If I have seen further it is by standing on the shoulders of giants</div>
+            If I have seen further it is by standing on the shoulders of giants
           </div>
           <footer>
             <div class="posted-date">10 days ago</div>
@@ -83,7 +83,7 @@
               </ul>
             </div>
           </footer>
-        </article>
+        </article> -->
       </section>
     </main>
   </body>
