--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
       </div>
       <div>
         <div>Write a new tweet</div>
+        <div class="arrow"><i class="fas fa-angle-double-down"></i></div>
       </div>
       
     </nav>
@@ -56,7 +57,7 @@
             <textarea name="text" id="tweet-text"></textarea>
           </div>
           <div class="button-counter-container">
-            <button type="submit">Tweet</button>
+            <button type="submit" id="submit-tweet">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
