add responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
 
+    <!-- Viewport -->
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
 
@@ -13,7 +16,9 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="./styles/layout.css" type="text/css"/>
     <link rel="stylesheet" href="./styles/nav.css" type="text/css"/>
-    <link rel="stylesheet" href="./styles/header.css" type="text/css"/><link rel="stylesheet" href="./styles/new-tweet.css" type="text/css"/>
+    <link rel="stylesheet" href="./styles/header.css" type="text/css"/>
+    <link rel="stylesheet" href="./styles/new-tweet.css" type="text/css"/>
+    <link rel="stylesheet" href="./styles/responsive.css" type="text/css"/>
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -33,7 +38,7 @@
         <span style="font-family: 'Bungee', cursive;">tweeter</span>
       </div>
       <div>
-        <div>Write a new tweet</div>
+        <div><span class="heavy-text">Write</span> a new tweet</div>
         <div class="arrow"><i class="fas fa-angle-double-down"></i></div>
       </div>
       
@@ -42,9 +47,8 @@
       <div class="avatar">
           <img src="./images/profile-hex.png"> 
       </div>
-      <br>
       <div class="profile-name">
-          <h2>Yasu <span class="light-text">Shimosaka</span></h2>
+          <h2><span class="heavy-text">Yasu</span> Shimosaka</h2>
       </div>
     </header>
     <!-- Page-specific (main) content here -->
