--- a/public/index.html
+++ b/public/index.html
@@ -39,25 +39,25 @@
       </div>
       <div>
         <div><span class="heavy-text">Write</span> a new tweet</div>
-        <div class="arrow"><i class="fas fa-angle-double-down"></i></div>
+        <div class="arrow"><i class="fas fa-angle-double-down compose-toggle-button"></i></div>
       </div>
     </nav>
     <div class="profile-tweet-container">
       <header id="profile">
         <div class="avatar">
-            <img src="./images/profile-hex.png"> 
+            <img src="./images/profile-hex1.png"> 
         </div>
         <div class="profile-name">
-            <h2><span class="heavy-text">Yasu</span> Shimosaka</h2>
+            <h2><span class="heavy-text">Wicket</span>  W. Warrick</h2>
         </div>
       </header>
     <!-- Page-specific (main) content here -->
-      <main class="container">
+      <main class="main-container">
         <section class="new-tweet">
           <div class="error-message-container">
-            <div class="error-message error-no-tweet"><i class="fas fa-bullhorn"></i> No Tweet! Let's tweet how you're doing today! <i class="fas fa-bullhorn"></i>
+            <div class="error-message error-no-tweet"><i class="fas fa-bullhorn"></i> No Tweet! Try again! <i class="fas fa-bullhorn"></i>
             </div>
-            <div class="error-message error-over-texts"><i class="fas fa-exclamation-triangle"></i> Too Long! Please tweet under 140 characters <i class="fas fa-exclamation-triangle"></i>
+            <div class="error-message error-over-texts"><i class="fas fa-exclamation-triangle"></i> Sorry, max 140 characters! <i class="fas fa-exclamation-triangle"></i>
             </div>
           </div>
           <div id="component-container">
